# led-kurokku

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README-cli.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-build-push.yml
docker/: README.md
docker/compose/: basic.yml  full.yml  standalone.yml
docker/entrypoints/: weather-entrypoint.sh  web-entrypoint.sh
docs/: ARCHITECTURE.md  README-cli.md  README-docker.md
src/led_kurokku/: cli_main.py  core.py  display_factory.py  main.py  models.py  web_server.py
src/led_kurokku/cli/: __init__.py  server.py
src/led_kurokku/cli/commands/: __init__.py  alert.py  config.py  instances.py  template.py  weather.py  web.py
src/led_kurokku/cli/models/: __init__.py  instance.py  weather.py
src/led_kurokku/cli/services/: __init__.py  weather_service.py
src/led_kurokku/cli/utils/: __init__.py  config_helpers.py  redis_helpers.py  weather_api.py
src/led_kurokku/ht16k33/: __init__.py  console.py  factory.py  led.py  segments.py  virtual.py  websocket.py
src/led_kurokku/tm1637/: __init__.py  base_driver.py  console.py  factory.py  led.py  virtual.py  websocket.py
src/led_kurokku/utils/: logging.py
src/led_kurokku/web/static/: README.md
src/led_kurokku/web/templates/web_kurokku/: index.html
src/led_kurokku/widgets/: __init__.py  alert.py  animation.py  base.py  clock.py  factory.py  message.py
src/led_kurokku_cli/: README.md  __init__.py  main.py
src/led_kurokku_cli/commands/: __init__.py  config.py  instances.py  weather.py
src/led_kurokku_cli/models/: __init__.py  instance.py  weather.py
src/led_kurokku_cli/services/: __init__.py  weather_service.py
src/led_kurokku_cli/utils/: __init__.py  config_helpers.py  redis_helpers.py  weather_api.py
tests/: conftest.py  test_alert_models.py  test_alert_priorities.py  test_animation_models.py  test_base_models.py  test_clock_widget.py  test_config_cli.py  test_default_location.py  test_ht16k33.py  test_models.py  test_weather_api.py  test_weather_models.py  test_weather_service.py  test_widget_configs.py
