[project]
name = "led-kurokku"
version = "0.1.1"
description = "LED display for TM1637 displays"
readme = "README.md"
authors = [{ name = "swilcox", email = "steven@wilcoxzone.com" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.11.3",
    "redis>=5.2.1",
    "pyyaml>=6.0.1",
    "aiohttp>=3.8.5",
]

[project.scripts]
led-kurokku = "led_kurokku.main:main"
kurokku-cli = "led_kurokku.cli_main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fakeredis>=2.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[project.optional-dependencies]
rpi = ["rpi-gpio>=0.7.1"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=led_kurokku --cov-report=term-missing:skip-covered"
# CLI tool is now included as part of the led_kurokku package

[tool.coverage.run]
source = ["led_kurokku"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.coverage.html]
directory = "htmlcov"
